# ouroboros

./: .gitignore  .yarnrc.yml  BUSINESS_MODEL.md  CHANGELOG.md  Makefile  PLANNED_FEATURE_ROADMAP_2026.md  README.md  docker-compose.yml  package.json  turbo.json
apps/api/: Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
apps/api/ouroboros_api/: __init__.py  cli.py  config.py  main.py  secrets.py
apps/api/ouroboros_api/adapters/: __init__.py  base.py  registry.py  tools.py
apps/api/ouroboros_api/api/: agents.py  auth.py  deps.py  flows.py  issues.py  mcp.py  projects.py  providers.py  roadmap.py  runs.py  schemas.py  users.py  workspaces.py  ws.py
apps/api/ouroboros_api/db/: __init__.py  models.py  session.py
apps/api/ouroboros_api/mcp/: __init__.py  manager.py  registry_client.py
apps/api/ouroboros_api/orchestrator/: __init__.py  context.py  cost.py  dry_run.py  engine.py  events.py  intervention.py  router.py
apps/api/ouroboros_api/sandbox/: __init__.py  shell.py  virtual_fs.py  workspace.py
apps/api/ouroboros_api/scm/: __init__.py  base.py  (+2 more)
apps/api/scripts/: with-venv.sh
apps/api/tests/: _auth.py  conftest.py  test_auth_guards.py  test_auth_oauth_github.py  test_auth_router.py  test_auth_service.py  test_cli_init.py  test_cost.py  test_dry_run.py  test_engine_topo.py  test_intervention.py  test_issues_sync_reconcile.py  test_mcp_manager.py  test_projects_access_token_api.py  test_projects_introspect_api.py  test_projects_oauth_api.py  test_providers_api.py  test_roadmap_parser.py  test_router.py  test_runs_delete.py  test_runs_resume.py  test_runs_sandbox_file.py  test_scm_client_auth.py  test_seed_agents_router_policy.py  test_workspaces_api.py  test_ws_auth.py
apps/cli/: README.md  pyproject.toml
apps/cli/ouroboros_cli/: __init__.py  main.py  storage.py
(+87 files in other folders)
