[project]
name = "ouroboros-api"
version = "0.1.0"
description = "Ouroboros orchestrator API: agent pipelines, dry-run, MCP, multi-provider LLM routing."
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0.36",
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "httpx>=0.28",
  "anthropic>=0.40",
  "ollama>=0.4",
  "mcp>=1.1",
  "gitpython>=3.1.43",
  "keyring>=25.5",
  "python-multipart>=0.0.20",
  "websockets>=14",
  "pyyaml>=6.0",
  "markdown-it-py>=3.0",
  "tiktoken>=0.8",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "ruff>=0.8",
  "mypy>=1.13",
]

[project.scripts]
ouroboros-api = "ouroboros_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ouroboros_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["B008"]
