[project]
name = "ouroboros-cli"
version = "0.1.0"
description = "Command-line client for Ouroboros."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "keyring>=24.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
ouroboros = "ouroboros_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ouroboros_cli"]
